Samples/Vin.Sample.Web/Views/Error/UnknownTenant.cshtml

@{
    ViewBag.Title = "UnknownTenant";
    Layout = "";
}

<div class="row">
    <div class="twelve columns">
        <h1>Error</h1>
    </div>
</div>
<div class="row">
    <div class="twelve columns">
        The website you reached is not available.
    </div>
</div>